# UPL0

./: CMakeLists.txt  CMakePresets.json
src/: CMakeLists.txt  main.cpp
src/ast/: AST.cpp  AST.hpp  CMakeLists.txt
src/ast/expressions/: CMakeLists.txt
src/ast/expressions/include/: ArgumentedExpression.hpp  BinaryExpression.hpp  BooleanExpression.hpp  ConstantVariableExpression.hpp  Expression.hpp  FloatExpression.hpp  IntegerExpression.hpp  StringExpression.hpp  TypeExpression.hpp  UnaryExpression.hpp  VariableExpression.hpp  VariableGetterExpression.hpp  all_expressions.hpp  expressionTypesList.hpp  modificators.hpp  operations.hpp
src/ast/expressions/source/: ArgumentedExpression.cpp  BinaryExpression.cpp  BooleanExpression.cpp  ConstantVariableExpression.cpp  Evaluate.cpp  FloatExpression.cpp  IntegerExpression.cpp  StringExpression.cpp  TypeExpression.cpp  UnaryExpression.cpp  VariableExpression.cpp  VariableGetterExpression.cpp  operations.cpp
src/ast/expressions/sources/: BinaryExpression.cpp  IntegerExpression.cpp  VariableExpression.cpp  operations.cpp
src/ast/statements/: CMakeLists.txt
src/ast/statements/include/: BlockStatement.hpp  BreakStatement.hpp  ClassStatement.hpp  ConstantVariableStatement.hpp  ContinueStatement.hpp  DoStatement.hpp  ForStatement.hpp  FunctionStatement.hpp  IfElseStatement.hpp  InitStatement.hpp  ReturnStatement.hpp  SpecialStatement.hpp  Statement.hpp  SwitchCaseStatement.hpp  SystemFunctionStatement.hpp  TypeStatement.hpp  VariableStatement.hpp  WhileStatement.hpp  all_statements.hpp  jumpControl.hpp  statementTypesList.hpp
src/ast/statements/source/: BlockStatement.cpp  BreakStatement.cpp  ClassStatement.cpp  ConstantVariableStatement.cpp  ContinueStatement.cpp  DoStatement.cpp  Execute.cpp  ForStatement.cpp  FunctionStatement.cpp  IfElseStatement.cpp  InitStatement.cpp  ReturnStatement.cpp  SpecialStatement.cpp  SwitchCaseStatement.cpp  SystemFunctionStatement.cpp  TypeStatement.cpp  VariableStatement.cpp  WhileStatement.cpp
src/expressions/: CMakeLists.txt
src/expressions/include/: BinaryExpression.hpp  BooleanExpression.hpp  Expression.hpp  IntegerExpression.hpp  NumberExpression.hpp  UnaryExpression.hpp  all.hpp  expressionTypesList.hpp
src/expressions/sources/: BinaryExpression.cpp  BooleanExpression.cpp  IntegerExpression.cpp  NumberExpression.cpp  UnaryExpression.cpp
src/interpreter/: CMakeLists.txt  Interpreter.cpp  Interpreter.hpp  systemFunctions.cpp  systemFunctions.hpp
src/lexer/: Lexer.cpp  Lexer.hpp  token.cpp  token.hpp
src/parser/: Parser.cpp  Parser.hpp
src/statements/include/: BlockStatement.hpp  InitStatement.hpp  Statement.hpp  statementTypesList.hpp
src/token/: token.cpp  token.hpp
tests/: CMakeLists.txt  pch.hpp
tests/Interpreter/: Interpreter_tests.cpp
tests/Lexer/: Lexer_tests.cpp
tests/Parser/: Parser_tests.cpp
